Code cleanup warnings